# nomad-pv-plugin-workshop

./: .cruft.json  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
nomad-pv-plugin-template/: .cruft.json  MANIFEST.in  README.md  mkdocs.yml  move_template_files.sh  pyproject.toml
nomad-pv-plugin-template/docs/: index.md
nomad-pv-plugin-template/src/nomad_pv_plugin_template/apps/: __init__.py
nomad-pv-plugin-template/src/nomad_pv_plugin_template/normalizers/: __init__.py  normalizer.py
nomad-pv-plugin-template/src/nomad_pv_plugin_template/parsers/: __init__.py  foo_batch_parser.py  foo_measurement_parser.py  parser.py
nomad-pv-plugin-template/src/nomad_pv_plugin_template/schema_packages/: __init__.py  foo_package.py  schema_package.py
nomad-pv-plugin-template/tests/apps/: test_app.py
nomad-pv-plugin-template/tests/data/: test.archive.yaml
nomad-pv-plugin-template/tests/parsers/: utils.py
nomad-pv-plugin-workshop/: .cruft.json  MANIFEST.in  README.md  mkdocs.yml  move_template_files.sh  pyproject.toml
nomad-pv-plugin-workshop/docs/: index.md
nomad-pv-plugin-workshop/src/nomad_pv_plugin_workshop/apps/: __init__.py
nomad-pv-plugin-workshop/src/nomad_pv_plugin_workshop/example_uploads/voila_scripts/: Data_Uploader.archive.json  JV_Analysis.archive.json  api_calls.py  excel_sheet_creator.archive.json
nomad-pv-plugin-workshop/src/nomad_pv_plugin_workshop/normalizers/: __init__.py  normalizer.py
nomad-pv-plugin-workshop/src/nomad_pv_plugin_workshop/parsers/: __init__.py  foo_batch_parser.py  foo_measurement_parser.py  parser.py
nomad-pv-plugin-workshop/src/nomad_pv_plugin_workshop/schema_packages/: __init__.py  schema_package.py
nomad-pv-plugin-workshop/tests/apps/: test_app.py
nomad-pv-plugin-workshop/tests/data/: test.archive.yaml
nomad-pv-plugin-workshop/tests/parsers/: utils.py
reference/: references.html
search/: search_index.json
src/pvworkshop/apps/: __init__.py
src/pvworkshop/example_uploads/voila_scripts/: Data_Uploader.archive.json  JV_Analysis.archive.json  api_calls.py  excel_sheet_creator.archive.json
src/pvworkshop/normalizers/: __init__.py  normalizer.py
src/pvworkshop/parsers/: __init__.py  container_batch_parser.py  container_measurement_parser.py  parser.py
src/pvworkshop/schema_packages/: __init__.py  container_package.py  schema_package.py
tests/apps/: test_app.py
tests/data/: test.archive.yaml
tests/parsers/: utils.py
tutorial/: tutorial.html
